<resources>
    <string name="app_name">Pr004</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cuatroEst">Las Cuatro Estaciones</string>
    <string name="estaciones">Estaciones</string>
    <string name="primavera">Primavera</string>
    <string name="verano">Verano</string>
    <string name="otoño">Otoño</string>
    <string name="invierno">Invierno</string>
    <string name="img4est">Imagen de 4 Estaciones</string>
    <string name="megusta">Me Gusta</string>
</resources>
